# spritesheet_editor

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md
include/FontAwesome/: IconsFontAwesome6.h
include/tinyxml2/: tinyxml2.cpp  tinyxml2.h
resources/layouts/: default.ini
src/: AnimationPreview.cpp  AnimationPreview.h  Application.cpp  Application.h  AssetManager.h  Entity.h  Frame.h  Hierarchy.cpp  Hierarchy.h  ImageHandler.cpp  ImageHandler.h  Input.cpp  Input.h  Layer.h  MoveTool.cpp  MoveTool.h  SelectTool.cpp  SelectTool.h  SpriteEntity.cpp  SpriteEntity.h  Tool.cpp  Tool.h  Toolbox.cpp  Toolbox.h  Viewport.cpp  Viewport.h  Visitor.h  components.h  constants.h  main.cpp  tools.h
src/layers/: Hierarchy.h  Layer.h  Viewport.cpp  Viewport.h
src/managers/: AssetManager.cpp  AssetManager.h
src/tools/: ExtractTool.cpp  ExtractTool.h  MoveTool.cpp  MoveTool.h  SelectionTool.cpp  SelectionTool.h
src/utils/: Maths.hpp
